--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -3,11 +3,17 @@
 
   @media (min-width: $tablet-width) {
     position: absolute;
-    top: 30%;
+    top: 50%;
     left: 8%;
     display: flex;
     flex-direction: column;
     gap: 15px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    top: unset;
+    left: unset;
   }
 }
 .social__link {
