--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -5,6 +5,14 @@
     @include title;
     margin-bottom: 30px;
   }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+
+    & h2 {
+      margin-bottom: 60px;
+    }
+  }
 }
 
 .review__content {
@@ -13,7 +21,7 @@
   margin-bottom: 25px;
 
   @media (min-width: $tablet-width) {
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 }
 
@@ -23,6 +31,15 @@
   flex-direction: column;
   width: calc(100% - 30px);
   margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: calc(100% - 60px);
+  }
+
+  @media (min-width: $desktop-width) {
+    width: calc(100% - 190px);
+    max-width: 1350px;
+  }
 }
 
 .review__btn-mb {
@@ -57,6 +74,13 @@
   width: 57%;
   margin: 0 auto;
   padding: 15px;
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    top: 12px;
+    right: 23%;
+    width: 18%;
+  }
 }
 
 .review__wrapper {
@@ -77,6 +101,7 @@
   }
   @media (min-width: $desktop-width) {
     border-radius: 18px;
+    width: 32%;
   }
 
   & img {
@@ -107,6 +132,8 @@
     background-position: top center;
     background-size: contain;
     transform: translateX(-50%);
+    cursor: pointer;
+    z-index: 1;
 
     @media (min-width: $mobile-width-max) {
       width: 27px;
@@ -115,6 +142,10 @@
 
     @media (min-width: $tablet-width) {
       top: 15%;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: 32%;
     }
   }
   &::after {
@@ -139,6 +170,10 @@
       top: 7%;
       width: 61px;
       height: 59px;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: 24%;
     }
   }
 }
@@ -176,6 +211,10 @@
     width: 106px;
     bottom: 25%;
   }
+
+  @media (min-width: $desktop-width) {
+    bottom: 20%;
+  }
 }
 .review__title {
   padding: 8px 9px 12px;
@@ -208,6 +247,10 @@
 
   @media (min-width: $tablet-width) {
     padding-left: 35px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 89%;
   }
 
   & h3 {
@@ -248,6 +291,11 @@
 
   @media (min-width: $tablet-width) {
     width: 25%;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 19px;
+    margin-top: -20px;
   }
 }
 
