--- a/source/sass/global/general.scss
+++ b/source/sass/global/general.scss
@@ -24,6 +24,10 @@
   color: $btn-transparrent;
   background-color: transparent;
   border: 1px solid $border;
+
+  @media (min-width: $desktop-width) {
+    padding: 15px 23px;
+  }
 }
 
 .btn--accent {
