--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,6 +1,7 @@
 $accent: #FF970A;
 $btn-accent: #FF9A10;
 $second-accent: #FF9618;
+$btn-hover: #F77100;
 $bg-wrap: #181818;
 $btn-light: #1B1B1B;
 $btn-gray: #696969;
