--- a/source/sass/blocks/options.scss
+++ b/source/sass/blocks/options.scss
@@ -136,14 +136,11 @@
   @media (min-width: $tablet-width) {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
+
     padding: 0;
     background-color: $black;
     border-radius: 20px;
-  }
-
-  @media (min-width: $desktop-width) {
-    justify-content: space-between;
   }
 }
 .options__item {
@@ -195,6 +192,11 @@
     @media (min-width: $tablet-width) {
       background-color: $black;
     }
+  }
+
+  &:hover,
+  &:focus {
+    background-color: $accent;
   }
 }
 .options__description {
