--- a/source/sass/global/general.scss
+++ b/source/sass/global/general.scss
@@ -28,6 +28,17 @@
   @media (min-width: $desktop-width) {
     padding: 15px 23px;
   }
+
+  &:hover,
+  &:focus {
+    color: $black;
+    background: none;
+    background-color: $btn-transparrent;
+  }
+
+  &:active {
+    color: $white;
+  }
 }
 
 .btn--accent {
@@ -38,13 +49,13 @@
 
   &:hover,
   &:focus {
-    // color: $white;
-    // background-color: $sky;
+    color: $white;
+    background: none;
+    background-color: $btn-hover;
   }
 
   &:active {
-    // color: rgba($white, 0.3);
-    // background-color: $sky;
+    color: $btn-gray;
   }
 }
 
@@ -57,11 +68,11 @@
 
   &:hover,
   &:focus {
-    // color: $sky;
+    transform: scale(0.9);
   }
 
   &:active {
-    // color: rgba($sky, 0.3);
+    opacity: 0.5;
   }
 }
 
@@ -72,7 +83,6 @@ ul {
 button {
   border: none;
   background: transparent;
-  // outline: 1px solid red;
 }
 
 .accent-color {
