--- a/source/sass/blocks/options.scss
+++ b/source/sass/blocks/options.scss
@@ -101,7 +101,7 @@
   }
 }
 .options__detals {
-  display: flex;
+
   justify-content: space-between;
   column-gap: 15px;
   padding: 0 27px 60px 17px;
@@ -119,9 +119,10 @@
       padding: 20px;
     }
   }
+
   @media (min-width: $desktop-width) {
     border-radius: 18px;
-    padding-bottom:60px;
+    padding-bottom: 60px;
 
     &--deal {
       padding: 0 30px 30px;
@@ -129,7 +130,15 @@
     }
   }
 
+  &--hide {
+    display: none;
+  }
+
+  &--show {
+    display: flex;
+  }
 }
+
 .options__list {
   padding-top: 25px;
 
@@ -149,6 +158,7 @@
   font-weight: 400;
   line-height: 12px;
   background: linear-gradient(180deg, #141414 0%, rgba(20, 20, 20, 0) 100%);
+  cursor: pointer;
 
   @media (min-width: $tablet-width) {
     display: block;
