--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import "blocks/options.scss";
 @import "blocks/detals-control.scss";
 @import "blocks/detals-deal.scss";
+@import "blocks/detals-template.scss";
 @import "blocks/options.scss";
 @import "blocks/renge-slider.scss";
 @import "blocks/radio.scss";
