--- a/source/sass/blocks/social-footer.scss
+++ b/source/sass/blocks/social-footer.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-evenly;
   width: calc(100% - 20px);
+  max-width: 320px;
 
   @media (min-width: $desktop-width) {
     justify-content: space-between;
